fix(components): [transfer] fix header and footer layout issues

--- a/packages/theme-chalk/src/transfer.scss
+++ b/packages/theme-chalk/src/transfer.scss
@@ -145,24 +145,34 @@
       align-items: center;
 
       .#{$namespace}-checkbox__label {
+        display: flex;
+        flex: 1;
+        min-width: 0;
         font-size: 16px;
         color: getCssVar('text-color', 'primary');
+        line-height: getCssVar('transfer-panel-header-height');
         font-weight: normal;
-
-        span {
-          position: absolute;
-          right: 15px;
-          top: 50%;
-          transform: translate3d(0, -50%, 0);
-          color: getCssVar('text-color', 'secondary');
-          font-size: 12px;
-          font-weight: normal;
-        }
       }
     }
   }
 
+  .#{$namespace}-transfer-panel__header-title {
+    @include utils-ellipsis;
+    flex: 1;
+    min-width: 0;
+  }
+
+  .#{$namespace}-transfer-panel__header-count {
+    flex-shrink: 0;
+    margin-left: 8px;
+    margin-right: 15px;
+    color: getCssVar('text-color', 'secondary');
+    font-size: 12px;
+  }
+
   .#{$namespace}-transfer-panel__footer {
+    display: flex;
+    align-items: center;
     height: getCssVar('transfer-panel-footer-height');
     background: getCssVar('bg-color', 'overlay');
     margin: 0;
@@ -170,10 +180,8 @@
     border: 1px solid getCssVar('transfer-border-color');
     border-bottom-left-radius: getCssVar('transfer-border-radius');
     border-bottom-right-radius: getCssVar('transfer-border-radius');
-    @include utils-vertical-center;
 
     .#{$namespace}-checkbox {
-      padding-left: 20px;
       color: getCssVar('text-color', 'regular');
     }
   }
